# Minimal-Perturbation-Problem

./: ._index.md  README.md  index.md
Alameda/Timetables/1 Semester/: ._Timetable.txt
Alameda/Timetables/2 Semester/: ._Timetable.txt
Taguspark/Timetables/1 Semester/: ._Timetable.txt
Taguspark/Timetables/2 Semester/: ._Timetable.txt
Taguspark/space/: ._Lab.txt
layer/: CMakeLists.txt
layer/MPP/: GlucoseWrapper.h  MPPsolver.h  Main.cc  SingleShot.cc  SingleShot.h  SolverWrapper.h
layer/core/: Solver.cc  Solver.h  SolverTypes.h
layer/mtl/: VecThreads.h
layer/parallel/: ClausesBuffer.cc  Main.cc  ParallelSolver.cc  SolverConfiguration.cc
layer/simp/: Main.cc  SimpSolver.h
layer/utils/: System.h
